Fixed main body overlap

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font: 400 15px/1.8 'Source Sans Pro', sans-serif, Trebuchet, Veranda, Geneva;
     color: #777;
+    margin-bottom: 15%;
 }
 
 h3, h4 {
